# opencv-lab

./: .gitignore  README.md  new  new.py
examples/: CMakeLists.txt  cv_cmdusage.cpp  cv_drawing_circle.cpp  cv_drawing_line.cpp  cv_gui_imageblendig.cpp  cv_image_info.cpp  cv_imread.cpp  cv_imwrite.cpp  cv_mat_create_print.cpp
examples/ex_cmdusage/: CMakeLists.txt  Makefile  ex_cmdusage.cpp
examples/ex_drawing_circle/: CMakeLists.txt  ex_drawing_circle.cpp
examples/ex_drawing_line/: CMakeLists.txt  Makefile  ex_drawing_line.cpp
examples/ex_gui_imageblending/: CMakeLists.txt  ex_gui_imageblending.cpp  run.out
examples/ex_image_info/: CMakeLists.txt  ex_image_info.cpp
examples/ex_imread/: CMakeLists.txt  ex_imread.cpp
examples/ex_imwrite/: CMakeLists.txt  ex_imwrite.cpp
examples/ex_mat_create_print/: CMakeLists.txt  ex_mat_create_print.cpp
helloworld/: CMakeLists.txt  Makefile  helloworld.cpp
hist/: .gitignore  CMakeLists.txt  README.md  hist.cpp
hist/plot/: luminosity.txt  plot.gnu
hist/src/: hist.cpp
hist/src/headers/: hist.h  misc.cpp
opencv-lab/.svn/: wc.db
rects/: CMakeLists.txt  rects.cpp
scripts/: new.py  run.py
